Prettier code formatting

--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -19,7 +19,8 @@
     "only": "only",
     "graphic": "graphic",
     "graphic_plural": "graphics",
-    "browserSupportMessage": "Q is optimised for Chrome and may does not work in your browser.",
+    "browserSupportMessage":
+      "Q is optimised for Chrome and may does not work in your browser.",
     "changesSaved": "Changes saved.",
     "failedToSaveChanges": "Failed to save changes.",
     "loginFailed": "Your username or password is not correct.",
@@ -27,27 +28,34 @@
     "articlesWithThisGraphic": "Articles with this graphic"
   },
   "statistics": {
-    "tooFewNewGraphics": "Only {{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active.",
-    "enoughNewGraphics": "{{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active."
+    "tooFewNewGraphics":
+      "Only {{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active.",
+    "enoughNewGraphics":
+      "{{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active."
   },
   "editor": {
     "title": "Enter your data",
-    "questionLeaveWithUnsavedChanges": "Not all changes are saved, close anyway?",
-    "questionReallyEditBecauseActive": "This graphic is already activ. Changes will be applied in all articles. Do you really want to edit this graphic?",
+    "questionLeaveWithUnsavedChanges":
+      "Not all changes are saved, close anyway?",
+    "questionReallyEditBecauseActive":
+      "This graphic is already activ. Changes will be applied in all articles. Do you really want to edit this graphic?",
     "confirmProceedToEditor": "Yes, proceed to editor",
     "cancelProceedToEditor": "No, cancel",
     "arrayEntryAdd": "add {{ arrayEntryLabel }}",
-    "activatingEditorTakesTooLong": "It takes too long to load the editor, something is wrong.",
+    "activatingEditorTakesTooLong":
+      "It takes too long to load the editor, something is wrong.",
     "failedToSave": "Failed to save",
     "conflictOnSave": "Failed to save due to a conflict",
     "failedToLoadEditorPart": "failed to load the editor for this element",
-    "noAutosaveBecauseActive": "Automatic saving is deactivated because the graphic is already active",
+    "noAutosaveBecauseActive":
+      "Automatic saving is deactivated because the graphic is already active",
     "transpose": "Switch rows and columns"
   },
   "metaEditor": {
     "title": "Finalize your chart",
     "annotations": "Annotations",
-    "annotationPlaceholder": "Add tags to your graphic which help you to search for it",
+    "annotationPlaceholder":
+      "Add tags to your graphic which help you to search for it",
     "publication": "Publication",
     "shortname": "Shortname",
     "department": "Department"
@@ -92,13 +100,17 @@
   "dropzone": {
     "dictDefaultMessage": "Drop files here to upload",
     "dictDefaultMessageSingleFile": "Drop file here to upload",
-    "dictFallbackMessage": "Your browser does not support drag'n'drop file uploads.",
-    "dictFallbackText": "Please use the fallback form below to upload your files like in the olden days.",
-    "dictFileTooBig": "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
+    "dictFallbackMessage":
+      "Your browser does not support drag'n'drop file uploads.",
+    "dictFallbackText":
+      "Please use the fallback form below to upload your files like in the olden days.",
+    "dictFileTooBig":
+      "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
     "dictInvalidFileType": "You can't upload files of this type.",
     "dictResponseError": "Server responded with {{statusCode}} code.",
     "dictCancelUpload": "Cancel upload",
-    "dictCancelUploadConfirmation": "Are you sure you want to cancel this upload?",
+    "dictCancelUploadConfirmation":
+      "Are you sure you want to cancel this upload?",
     "dictRemoveFile": "Remove file",
     "dictMaxFilesExceeded": "You cannot upload any more files."
   },
