--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -19,7 +19,8 @@
     "only": "nur",
     "graphic": "Grafik",
     "graphic_plural": "Grafiken",
-    "browserSupportMessage": "Q ist für Chrome optimiert und funktioniert in Ihrem Browser evtl. nicht.",
+    "browserSupportMessage":
+      "Q ist für Chrome optimiert und funktioniert in Ihrem Browser evtl. nicht.",
     "changesSaved": "Die Änderungen wurden gespeichert.",
     "failedToSaveChanges": "Die Änderung konnten nicht gespeichert werden.",
     "loginFailed": "Ihr Benutzername oder Passwort ist unbekannt.",
@@ -27,27 +28,35 @@
     "articlesWithThisGraphic": "Artikel mit dieser Grafik"
   },
   "statistics": {
-    "tooFewNewGraphics": "Nur {{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive.",
-    "enoughNewGraphics": "{{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive."
+    "tooFewNewGraphics":
+      "Nur {{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive.",
+    "enoughNewGraphics":
+      "{{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive."
   },
   "editor": {
     "title": "Gib deine Daten ein",
-    "questionLeaveWithUnsavedChanges": "Es sind nicht alle Änderungen gespeichert, trotzdem schliessen?",
-    "questionReallyEditBecauseActive": "Diese Grafik ist bereits aktiv. Änderungen werden in allen Artikel übernommen. Willst du diese Grafik wirklich bearbeiten?",
+    "questionLeaveWithUnsavedChanges":
+      "Es sind nicht alle Änderungen gespeichert, trotzdem schliessen?",
+    "questionReallyEditBecauseActive":
+      "Diese Grafik ist bereits aktiv. Änderungen werden in allen Artikel übernommen. Willst du diese Grafik wirklich bearbeiten?",
     "confirmProceedToEditor": "Ja, weiter zum Editor",
     "cancelProceedToEditor": "Nein, abbrechen",
     "arrayEntryAdd": "{{ arrayEntryLabel }} hinzufügen",
-    "activatingEditorTakesTooLong": "Es dauert zu lange den Editor zu laden, irgendwas ist schief gelaufen.",
+    "activatingEditorTakesTooLong":
+      "Es dauert zu lange den Editor zu laden, irgendwas ist schief gelaufen.",
     "failedToSave": "Speichern ist fehlgeschlagen",
     "conflictOnSave": "Speichern ist fehlgeschlagen weil ein Konflikt besteht",
-    "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
-    "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
+    "failedToLoadEditorPart":
+      "Der Editor für dieses Element konnte nicht geladen werden",
+    "noAutosaveBecauseActive":
+      "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
     "transpose": "Zeilen und Spalten tauschen"
   },
   "metaEditor": {
     "title": "Füge weitere Informationen zur Grafik hinzu",
     "annotations": "Notizen",
-    "annotationPlaceholder": "Hier kannst du zusätzliche Schlagwörter erfassen, mit denen die Grafik einfacher gefunden werden kann",
+    "annotationPlaceholder":
+      "Hier kannst du zusätzliche Schlagwörter erfassen, mit denen die Grafik einfacher gefunden werden kann",
     "publication": "Medium",
     "shortname": "Autorenkürzel",
     "department": "Ressort"
@@ -59,7 +68,8 @@
     "blueprint": "als Vorlage benutzen",
     "blueprintTitlePrefix": "Kopie von ",
     "edit": "bearbeiten",
-    "failedToBlueprintItem": "Die Grafik konnte nicht als Vorlage verwendet werden."
+    "failedToBlueprintItem":
+      "Die Grafik konnte nicht als Vorlage verwendet werden."
   },
   "itemsFilter": {
     "allGraphics": "alle Grafiken",
@@ -81,21 +91,29 @@
   },
   "notifications": {
     "previewError": "Die Grafik kann nicht angezeigt werden",
-    "failedLoadingEditorConfig": "Die Editorkonfiguration konnte nicht geladen werden",
+    "failedLoadingEditorConfig":
+      "Die Editorkonfiguration konnte nicht geladen werden",
     "graphicNeedsATitle": "Grafik braucht einen Titel",
     "failedLoadingItems": "Grafiken konnten nicht geladen werden",
     "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
     "toolNotAvailable": "Dieses Tool steht nicht zur Verfügung",
-    "maxNumberOfFilesExceed": "Es können keine weiteren Dateien hochgeladen werden"
+    "maxNumberOfFilesExceed":
+      "Es können keine weiteren Dateien hochgeladen werden"
   },
   "dropzone": {
-    "dictDefaultMessage": "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
-    "dictDefaultMessageSingleFile": "Anklicken oder Bild hierhin ziehen, um es hochzuladen",
-    "dictFallbackMessage": "Ihr Browser unterstützt Drag&Drop Dateiuploads nicht",
+    "dictDefaultMessage":
+      "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
+    "dictDefaultMessageSingleFile":
+      "Anklicken oder Bild hierhin ziehen, um es hochzuladen",
+    "dictFallbackMessage":
+      "Ihr Browser unterstützt Drag&Drop Dateiuploads nicht",
     "dictFallbackText": "Benutzen Sie das Formular um Ihre Dateien hochzuladen",
-    "dictFileTooBig": "Die Datei ist zu gross. Die maximale Dateigrösse beträgt {{maxFileSize}}MB",
-    "dictInvalidFileType": "Eine Datei dieses Typs kann nicht hochgeladen werden",
-    "dictResponseError": "Der Server hat ihre Anfrage mit Status {{statusCode}} abgelehnt",
+    "dictFileTooBig":
+      "Die Datei ist zu gross. Die maximale Dateigrösse beträgt {{maxFileSize}}MB",
+    "dictInvalidFileType":
+      "Eine Datei dieses Typs kann nicht hochgeladen werden",
+    "dictResponseError":
+      "Der Server hat ihre Anfrage mit Status {{statusCode}} abgelehnt",
     "dictCancelUpload": "Hochladen abbrechen",
     "dictRemoveFile": "Datei entfernen",
     "dictMaxFilesExceeded": "Sie können keine weiteren Dateien mehr hochladen"
