(tool-selection) show only 4 tools based on user usage and the others behind a button

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -2,6 +2,9 @@
   "general": {
     "yes": "Ja",
     "no": "Nein",
+    "createLabel": "Eine Grafik erstellen",
+    "showAllTools": "alle Tools anzeigen",
+    "showLessTools": "weniger Tools anzeigen",
     "searchLabel": "Eine Grafik suchen",
     "login": "anmelden",
     "logout": "abmelden",
