--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -30,6 +30,15 @@
     "serverConnectionFailed": "Die Verbindung zum Server ist fehlgeschlagen.",
     "articlesWithThisGraphic": "Artikel mit dieser Grafik"
   },
+  "userConfig": {
+    "initials": "Initialen",
+    "toolSelection": "Tool Auswahl",
+    "toolsToShowInitially": "Tools die initial angezeigt werden sollen",
+    "toolSelectionType": {
+      "byUsage": "nach meiner Nutzung",
+      "byConfig": "nach Konfiguration"
+    }
+  },
   "statistics": {
     "tooFewNewGraphics":
       "Nur {{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive.",
