--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -3,8 +3,8 @@
     "yes": "yes",
     "no": "no",
     "createLabel": "Create a graphic",
-    "showAllTools": "show all tools",
-    "showLessTools": "show less tools",
+    "showAllTools": "Show all tools",
+    "showLessTools": "Show only my favorites",
     "searchLabel": "Search for a graphic",
     "login": "login",
     "logout": "logout",
