--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -2,9 +2,9 @@
   "general": {
     "yes": "Oui",
     "no": "Non",
-    "createLabel": "créer un graphique",
-    "showAllTools": "montrer tous les outils",
-    "showLessTools": "montrer moins d'outils",
+    "createLabel": "Créer un graphique",
+    "showAllTools": "Montrer tous les outils",
+    "showLessTools": "Afficher uniquement mes favoris",
     "searchLabel": "Chercher un graphique",
     "login": "Se connecter",
     "logout": "Se déconnecter",
