(items filter) improve visual apperance of item list filters

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -86,10 +86,10 @@
   },
   "itemsFilter": {
     "allGraphics": "alle Grafiken",
-    "byAll": "von allen",
-    "byMe": "von mir",
-    "allDepartments": "alle Ressorts",
-    "myDepartment": "nur mein Ressort",
+    "byAll": "Von allen",
+    "byMe": "Von mir",
+    "allDepartments": "Alle Ressorts",
+    "myDepartment": "Mein Ressort",
     "allPublications": "alle Publikationen",
     "allStates": "alle Zustände",
     "onlyActive": "nur aktive",
