(search) change search input visual appearance

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -3,6 +3,7 @@
     "yes": "Ja",
     "no": "Nein",
     "createLabel": "Neu erstellen",
+    "searchEditLabel": "Suchen und bearbeiten",
     "showAllTools": "Alle Tools anzeigen",
     "showLessTools": "nur meine Favoriten anzeigen",
     "searchLabel": "Eine Grafik suchen",
