--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -3,6 +3,7 @@
     "yes": "yes",
     "no": "no",
     "createLabel": "Create a graphic",
+    "searchEditLabel": "Search and edit",
     "showAllTools": "Show all tools",
     "showLessTools": "Show only my favorites",
     "searchLabel": "Search for a graphic",
