--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -3,6 +3,7 @@
     "yes": "Oui",
     "no": "Non",
     "createLabel": "Créer un graphique",
+    "searchEditLabel": "Rechercher et modifier",
     "showAllTools": "Montrer tous les outils",
     "showLessTools": "Afficher uniquement mes favoris",
     "searchLabel": "Chercher un graphique",
