Implement activate and deactivate options

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -63,6 +63,8 @@
   },
   "item": {
     "save": "speichern",
+    "activ": "aktiv",
+    "inactiv": "inaktiv",
     "activate": "aktivieren",
     "deactivate": "deaktivieren",
     "blueprint": "als Vorlage benutzen",
