--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -62,6 +62,8 @@
   },
   "item": {
     "save": "save",
+    "activ": "active",
+    "inactiv": "inactive",
     "activate": "activate",
     "deactivate": "deactivate",
     "blueprint": "use as blueprint",
