--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -83,6 +83,7 @@
     "failedToBlueprintItem": "Failed to blueprint the graphic.",
     "delete": "Delete",
     "questionDeleteItem": "Delete graphic?",
+    "questionDeleteItemSub": "Do you really want to delete <strong>{{graphicTitle}}</strong>?",
     "confirmDeleteItem": "Yes, delete",
     "cancelDeleteItem": "Cancel"
   },
